# Snake

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: Food.h  Game.h  Snake.h
src/: Food.cpp  Game.cpp  Snake.cpp  main.cpp
